--- a/index.html
+++ b/index.html
@@ -9,8 +9,49 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body>
-    <h1 class="text-5xl text-center font-bold text-teal-400">Account Book</h1>
+<body class="m-16">
+    <header>
+        <h1 class="text-5xl text-center font-bold text-teal-400 mb-6">Account Book</h1>
+    </header>
+    <main>
+        <section class="flex justify-center">
+            <div>
+                <img src="images/financial-concept.jpg" height="1000px" width="600px" alt="">
+            </div>
+            <div class="text-center mx-auto bg-slate-200 p-16 rounded">
+                <h3 class="font-semibold text-base mb-2">Income</h3>
+                <div class="flex">
+                    <p>Income: </p><input id="deposit-input"
+                        class="border block bg-gray-400 border-gray-400 w-3/4 ml-5 mb-4 px-2" type="text">
+                </div>
+                <h3 class="font-semibold text-base mb-2">Expenses</h3>
+                <div class="flex">
+                    <p>Food: </p><input id="deposit-input"
+                        class="border block bg-gray-400 border-gray-400 w-3/4 ml-8 mb-4 px-2" type="text">
+                </div>
+                <div class="flex">
+                    <p>Rent: </p><input id="deposit-input"
+                        class="border block bg-gray-400 border-gray-400 w-3/4 ml-9 mb-4 px-2" type="text">
+                </div>
+                <div class="flex">
+                    <p>Cloths: </p><input id="deposit-input"
+                        class="border block bg-gray-400 border-gray-400 w-3/4 ml-6 mb-4 px-2" type="text">
+                </div>
+                <button id="deposit-button" class="bg-sky-400 px-7 py-2 text-white font-medium mb-2">Calculate</button>
+                <h3 class="font-semibold text-lg mb-2">Total Expenses: <span>500</span></h3>
+                <h3 class="font-semibold text-lg mb-2">Balance: <span>500</span></h3>
+                <div class="flex justify-center mt-3 py-3">
+                    <p>Save: </p>
+                    <input id="deposit-input" class="border block bg-gray-400 border-gray-400 w-1/4 ml-2 mb-4 px-2"
+                        type="text">
+                    <p class="ml-2">%</p>
+                    <button id="deposit-button" class="bg-sky-400 px-7 text-white font-medium ml-2 mb-2">Save</button>
+                </div>
+                <h3 class="font-semibold text-lg mb-2">Saving Amount: <span>500</span></h3>
+                <h3 class="font-semibold text-lg mb-2">Remaining Balance: <span>500</span></h3>
+            </div>
+        </section>
+    </main>
 </body>
 
 </html>
