--- a/index.html
+++ b/index.html
@@ -9,14 +9,14 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="m-16">
+<body class="m-16 border border-gray-400 rounded pl-3 py-3">
     <header>
         <h1 class="text-5xl text-center font-bold text-teal-400 mb-6">Account Book</h1>
     </header>
     <main>
         <section class="flex justify-center">
             <div>
-                <img src="images/financial-concept.jpg" height="1000px" width="600px" alt="">
+                <img src="images/financial-concept.jpg" height="1000px" width="570px" alt="">
             </div>
             <div class="text-center mx-auto bg-slate-200 p-16 rounded">
                 <h3 class="font-semibold text-base mb-2">Income</h3>
