--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body class="m-16 border border-gray-400 rounded pl-3 py-3">
     <header>
-        <h1 class="text-5xl text-center font-bold text-teal-400 mb-6">Account Book</h1>
+        <h1 class="text-5xl text-center font-bold text-sky-400 mb-6">Account Book</h1>
     </header>
     <main>
         <section class="flex justify-center">
