--- a/index.html
+++ b/index.html
@@ -9,12 +9,12 @@
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
-<body class="m-16 border border-gray-400 rounded pl-3 py-3">
+<body class="lg:m-16 border border-gray-400 rounded lg:pl-3 py-3">
     <header>
-        <h1 class="text-5xl text-center font-bold text-sky-400 mb-6">Account Book</h1>
+        <h1 class="text-5xl text-center font-bold text-sky-400 mb-6">My Account Book</h1>
     </header>
     <main>
-        <section class="flex justify-center">
+        <section class="lg:flex lg:justify-center">
             <div>
                 <img src="images/financial-concept.jpg" height="1000px" width="570px" alt="">
             </div>
@@ -42,7 +42,7 @@
                 <h3 class="font-semibold text-lg mb-2">Balance: <span>500</span></h3>
                 <div class="flex justify-center mt-3 py-3">
                     <p>Save: </p>
-                    <input id="deposit-input" class="border block bg-gray-400 border-gray-400 w-1/4 ml-2 mb-4 px-2"
+                    <input id="deposit-input" class="border block bg-gray-400 border-gray-400 w-24 ml-2 mb-4 px-2"
                         type="text">
                     <p class="ml-2">%</p>
                     <button id="deposit-button" class="bg-sky-400 px-7 text-white font-medium ml-2 mb-2">Save</button>
