--- a/index.html
+++ b/index.html
@@ -5,52 +5,59 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Account Book</title>
+    <title>Digital Account Book</title>
     <script src="https://cdn.tailwindcss.com"></script>
 </head>
 
 <body class="lg:m-16 border border-gray-400 rounded lg:pl-3 py-3">
     <header>
-        <h1 class="text-5xl text-center font-bold text-sky-400 mb-6">My Account Book</h1>
+        <!-- main heading -->
+        <h1 class="text-5xl text-center font-bold text-sky-400 mb-6">Digital Account Book</h1>
     </header>
     <main>
+        <!-- main UI -->
         <section class="lg:flex lg:justify-center">
             <div>
+                <!-- image portion -->
                 <img src="images/financial-concept.jpg" height="1000px" width="570px" alt="">
             </div>
+            <!-- form or calculation portion -->
             <div class="text-center mx-auto bg-slate-200 p-16 rounded">
                 <h3 class="font-semibold text-base mb-2">Income</h3>
                 <div class="flex">
-                    <p>Income: </p><input id="deposit-input"
+                    <p>Income: </p><input id="income-input"
                         class="border block bg-gray-400 border-gray-400 w-3/4 ml-5 mb-4 px-2" type="text">
                 </div>
                 <h3 class="font-semibold text-base mb-2">Expenses</h3>
                 <div class="flex">
-                    <p>Food: </p><input id="deposit-input"
+                    <p>Food: </p><input id="food-input"
                         class="border block bg-gray-400 border-gray-400 w-3/4 ml-8 mb-4 px-2" type="text">
                 </div>
                 <div class="flex">
-                    <p>Rent: </p><input id="deposit-input"
+                    <p>Rent: </p><input id="rent-input"
                         class="border block bg-gray-400 border-gray-400 w-3/4 ml-9 mb-4 px-2" type="text">
                 </div>
                 <div class="flex">
-                    <p>Cloths: </p><input id="deposit-input"
+                    <p>Cloths: </p><input id="cloths-input"
                         class="border block bg-gray-400 border-gray-400 w-3/4 ml-6 mb-4 px-2" type="text">
                 </div>
-                <button id="deposit-button" class="bg-sky-400 px-7 py-2 text-white font-medium mb-2">Calculate</button>
+                <button id="calculate-button"
+                    class="bg-sky-400 px-7 py-2 text-white font-medium mb-2">Calculate</button>
                 <h3 class="font-semibold text-lg mb-2">Total Expenses: <span>500</span></h3>
                 <h3 class="font-semibold text-lg mb-2">Balance: <span>500</span></h3>
                 <div class="flex justify-center mt-3 py-3">
                     <p>Save: </p>
-                    <input id="deposit-input" class="border block bg-gray-400 border-gray-400 w-24 ml-2 mb-4 px-2"
+                    <input id="save-input" class="border block bg-gray-400 border-gray-400 w-24 ml-2 mb-4 px-2"
                         type="text">
                     <p class="ml-2">%</p>
-                    <button id="deposit-button" class="bg-sky-400 px-7 text-white font-medium ml-2 mb-2">Save</button>
+                    <button id="save-button" class="bg-sky-400 px-7 text-white font-medium ml-2 mb-2">Save</button>
                 </div>
                 <h3 class="font-semibold text-lg mb-2">Saving Amount: <span>500</span></h3>
                 <h3 class="font-semibold text-lg mb-2">Remaining Balance: <span>500</span></h3>
             </div>
         </section>
+        <!-- js source  -->
+        <script src="js/calculation.js"></script>
     </main>
 </body>
 
