calculate event handler

--- a/index.html
+++ b/index.html
@@ -43,8 +43,8 @@
                 </div>
                 <button id="calculate-button"
                     class="bg-sky-400 px-7 py-2 text-white font-medium mb-2">Calculate</button>
-                <h3 class="font-semibold text-lg mb-2">Total Expenses: <span>500</span></h3>
-                <h3 class="font-semibold text-lg mb-2">Balance: <span>500</span></h3>
+                <h3 class="font-semibold text-lg mb-2">Total Expenses: <span id="total-expenses">00</span></h3>
+                <h3 class="font-semibold text-lg mb-2">Balance: <span id="total-balance">00</span></h3>
                 <div class="flex justify-center mt-3 py-3">
                     <p>Save: </p>
                     <input id="save-input" class="border block bg-gray-400 border-gray-400 w-24 ml-2 mb-4 px-2"
