--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
                     <p class="ml-2">%</p>
                     <button id="save-button" class="bg-sky-400 px-7 text-white font-medium ml-2 mb-2">Save</button>
                 </div>
-                <h3 class="font-semibold text-lg mb-2">Saving Amount: <span>500</span></h3>
+                <h3 class="font-semibold text-lg mb-2">Saving Amount: <span id="saving-amount">00</span></h3>
                 <h3 class="font-semibold text-lg mb-2">Remaining Balance: <span>500</span></h3>
             </div>
         </section>
