--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 </div>
                 <button id="calculate-button"
                     class="bg-sky-400 px-7 py-2 text-white font-medium mb-2">Calculate</button>
+                <h3 class="font-semibold text-lg mb-2">Total Income: <span id="total-incomes">00</span></h3>
                 <h3 class="font-semibold text-lg mb-2">Total Expenses: <span id="total-expenses">00</span></h3>
                 <h3 class="font-semibold text-lg mb-2">Balance: <span id="total-balance">5000</span></h3>
                 <div class="flex justify-center mt-3 py-3">
